<resources>
    <string name="app_name">Stock Portfolio Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="server_client_id">AIzaSyDVTEBRRVHpUpijX7deSrC3CLCB41RmEiU</string>
    <string name="todo">TODO</string>
    <string name="buy_price">Buy Price</string>
    <string name="units">Units</string>
    <string name="date">Date</string>
    <string name="sell_price">Sell Price</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="sell_date">Sell Date</string>
    <string name="buy_date">Buy Date</string>
    <string name="investment">Investment</string>
    <string name="proft">Profit</string>
    <string name="change">Change</string>
    <string name="no_stock_found">No Stock Found</string>
    <string name="search">Search</string>
    <string name="sort">SORT</string>
    <string name="filter">FILTER</string>
    <string name="sort_by">SORT BY</string>
    <string name="stocks_name">Stocks Name</string>
</resources>