<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activity.AddStock">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stockName"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1" />

            <!--            <include-->
            <!--                android:id="@+id/sppacer"-->
            <!--                layout="@layout/spacer" />-->

            <TextView
                android:id="@+id/buyDatePicker"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="10dp"
                android:focusable="false"
                android:gravity="center_vertical"
                android:hint="@string/sell_date"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/sellDatePicker"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="10dp"
                android:focusable="false"
                android:gravity="center_vertical"
                android:hint="@string/buy_date"
                android:textSize="19sp" />


            <!--            <include-->
            <!--                android:id="@+id/sppacer"-->
            <!--                layout="@layout/spacer" />-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/units"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/units"
                android:inputType="number" />
            <!--            <include-->
            <!--                android:id="@+id/sppacer"-->
            <!--                layout="@layout/spacer" />-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/buyPrice"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/buy_price"
                android:inputType="numberDecimal" />

            <!--            <include-->
            <!--                android:id="@+id/sppacer"-->
            <!--                layout="@layout/spacer" />-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sellPrice"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/sell_price"
                android:inputType="numberDecimal" />

            <!--            <include-->
            <!--                android:id="@+id/sppacer"-->
            <!--                layout="@layout/spacer" />-->


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addStockButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/add" />
</LinearLayout>


