<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PortfolioFragment">

    <EditText
        android:background="@drawable/search_edittext_bg"
        android:drawablePadding="10dp"
        android:padding="12dp"
        android:textColorHint="@color/gray"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:id="@+id/search"
        android:textColor="@color/black"
        android:elevation="10dp"

        android:layout_margin="10dp"
        android:maxLines="1"
        android:inputType="text"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/stockListRc"
        android:paddingHorizontal="12dp"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/stock_list_itemview"
        android:layout_below="@id/search"
        android:layout_above="@id/bottomNav"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/noStockText"
        android:text="@string/no_stock_found"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addBtn"
        android:layout_above="@id/bottomNav"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:background="@color/white"
        android:elevation="10dp"
        android:id="@+id/bottomNav"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/sortBtn"
                android:padding="10dp"
                android:drawablePadding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sort"
                app:drawableStartCompat="@drawable/baseline_compare_arrows_24" />

        </LinearLayout>
        <LinearLayout
            android:gravity="center"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/filterBtn"
                android:padding="10dp"
                android:drawablePadding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/filter"
                app:drawableStartCompat="@drawable/baseline_filter_alt_24" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>