<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/card"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/stockName"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:text="CHD Chemicals"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="10dp"

            android:layout_below="@id/stockName"
            android:layout_alignParentStart="true"
            android:id="@+id/invested"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textAlignment="textStart"
                android:textStyle="bold"
                style="@style/textHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/investment"/>

            <TextView
                android:textColor="@color/gold"
                android:textAlignment="textStart"
                style="@style/textSubHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/investedText"
                android:text="000"/>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="6dp"
            android:layout_below="@id/invested"
            android:layout_alignParentStart="true"
            android:id="@+id/proft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textAlignment="textStart"
                style="@style/textHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/proft"/>

            <TextView
                android:textColor="@color/seaGreen"
                android:textAlignment="textStart"
                style="@style/textSubHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profitText"
                android:text="000"/>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"

            android:layout_below="@id/stockName"
            android:layout_alignParentEnd="true"
            android:id="@+id/units"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textAlignment="textEnd"
                style="@style/textHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/units"/>

            <TextView
                android:textAlignment="textEnd"
                style="@style/textSubHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/unitsText"
                android:text="000"/>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="6dp"
            android:layout_below="@id/invested"
            android:layout_alignParentEnd="true"
            android:id="@+id/change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textAlignment="textEnd"
                style="@style/textHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change"/>

            <TextView
                android:textColor="@color/seaGreen"
                android:layout_width="match_parent"
                android:textAlignment="textEnd"
                style="@style/textSubHeading"
                android:layout_height="wrap_content"
                android:id="@+id/changeText"
                android:text="000"/>
        </LinearLayout>
    </RelativeLayout>


</androidx.cardview.widget.CardView>